Fixed many layout problems

--- a/static/cardflip.css
+++ b/static/cardflip.css
@@ -1,16 +1,5 @@
-.panel {
-    width: 45%;
-    height: 150px;
-    margin: 20px;
-    position: relative;
-    font-size: .8em;
-    
-    -webkit-perspective: 600px;
-    -moz-perspective: 600px;
-}
-
 .panelbox {
-    width: 45%;
+    max-width: 100%;
     height: 137px;
     border: 1px solid #A3A1A2;
     padding: 15px;
@@ -21,6 +10,18 @@
     background-color: #DDDDDD;
     background-image: -webkit-linear-gradient(top, #DDDDDD, #F7F7F7);
     background-image: -moz-linear-gradient(top, #DDDDDD, #F7F7F7);
+}
+
+.panel {
+    max-width: 100%;
+    min-width: 170px;
+    height: 150px;
+    margin: 20px;
+    position: relative;
+    font-size: .8em;
+    
+    -webkit-perspective: 600px;
+    -moz-perspective: 600px;
 }
 
 .panel > div > div {
